# GridSenseAI

./: app.py  architecture.md  data_generator.py  forecasting.py  grid_simulation.py  main.py  netlify.toml  optimization.py  pyproject.toml  requirements.txt  setup.sh  streamlit.py
attached_assets/: Pasted-Project-60-AI-powered-Smart-Grid-Energy-Management-Project-Title-GridSense-AI-powered-Smart-Gr-1762257672144_1762257672146.txt
